Refactored To Use Rebase's New InstanceScreen System.